feat(g1): made g1 handlers and test
