# backend/internal/handler/middleware.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"context"
 	"errors"
 	"fmt"
 
@@ -21,7 +20,7 @@ const (
 	NameRefreshCookie = "refresh-token"
 )
 
-func (h *handler) CookieAuthMiddleware(next http.Handler) http.Handler {
+func (h *handler) CookieAuthMiddleware(next HandlerFuncWithUser) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		var (
 			cookie *http.Cookie
@@ -41,12 +40,42 @@ func (h *handler) CookieAuthMiddleware(next http.Handler) http.Handler {
 			h.makeErrorResponse(w, r, err, code500)
 			return
 		}
-		ctx := context.WithValue(r.Context(), CtxKeyUser, user)
-		next.ServeHTTP(w, r.WithContext(ctx))
+
+		next(w, user, r)
 	})
 }
 
-func (h *handler) CookieRefreshAuthMiddleware(next http.Handler) http.Handler {
+func (h *handler) UnnecessaryCookieAuthMiddleware(next HandlerFuncWithUser) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		var (
+			cookie *http.Cookie
+			err    error
+		)
+		cookie, err = r.Cookie(NameCookie)
+		if err != nil {
+			if errors.Is(err, http.ErrNoCookie) {
+				next(w, nil, r)
+				return
+			}
+			h.logging.Info("cookie not found in ws connect")
+			r.Body.Close()
+			h.makeErrorResponse(w, r, errors.New("missing credentials"), code500)
+			return
+		}
+
+		token := cookie.Value
+		user, err := h.service.GetUserByJWToken(r.Context(), jwtoken.PurposeAccess, token)
+		if err != nil {
+			r.Body.Close()
+			h.makeErrorResponse(w, r, err, code500)
+			return
+		}
+
+		next(w, user, r)
+	})
+}
+
+func (h *handler) CookieRefreshAuthMiddleware(next HandlerFuncWithUser) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		var (
 			cookie *http.Cookie
@@ -67,29 +96,15 @@ func (h *handler) CookieRefreshAuthMiddleware(next http.Handler) http.Handler {
 			h.makeErrorResponse(w, r, err, code500)
 			return
 		}
-		ctx := context.WithValue(r.Context(), CtxKeyUser, user)
-		next.ServeHTTP(w, r.WithContext(ctx))
+
+		next(w, user, r)
 	})
 }
 
-func (h *handler) rolePermissionMiddleware(role domain.Role, next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		userContext, ok := r.Context().Value(CtxKeyUser).(domain.UserWithTokenNumber)
-		if !ok {
-			if err := writeResponse(w, r, http.StatusBadRequest, models.ErrorResponse{
-				Code:    http.StatusBadRequest,
-				Message: fmt.Sprintf("Invalid UserChain with role %w", role),
-			}); err != nil {
-				h.logging.Error(fmt.Errorf("write response: %w", err))
-			}
-
-			return
-		}
-
-		if role == userContext.Role {
-			ctx := context.WithValue(r.Context(), CtxKeyUser, userContext)
-			next.ServeHTTP(w, r.WithContext(ctx))
-
+func (h *handler) rolePermissionMiddleware(role domain.Role, next HandlerFuncWithUser) HandlerFuncWithUser {
+	return HandlerFuncWithUser(func(w http.ResponseWriter, user *domain.UserWithTokenNumber, r *http.Request) {
+		if role == user.Role {
+			next(w, user, r)
 			return
 		}
 
